# modal-gpu-puzzles

./: GPU_puzzlers.ipynb  GPU_puzzlers.py  README.md  app.py  env.yaml  lib.py  main.py  pyproject.toml  typescript
src/: app.py
src/lib/: __init__.py  framework.py
src/puzzles/: __init__.py  definitions.py
