[project]
name = "gpu-puzzle"
version = "0.1.0"
description = "Wrapper around the gpu puzzles meant to run on monad gpus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["modal"]

[project.scripts]
test = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
